src/test/ui/feature-gates/feature-gate-doc_cfg-cfg-rustdoc.stderr
error[E0658]: `cfg(doc)` is experimental and subject to change
  --> $DIR/feature-gate-doc_cfg-cfg-rustdoc.rs:1:7
   |
LL | #[cfg(doc)]
   |       ^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/43781
   = help: add `#![feature(doc_cfg)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
